# Fullstack_dem

./: GRUD.txt
backend-app/: pyproject.toml
backend-app/app/: __init__.py  extensions.py  flask_boilerplate_main.db
backend-app/app/controller/: task_controller.py  user_controller.py
backend-app/app/model/: task_model.py  user_model.py
backend-app/app/service/: task_service.py  user_service.py
backend-app/app/util/: dto.py
backend-app/migrations/versions/: 4591bf00cc3d_migracao1.py  cf81ce70ae9e_migracao1.py
frontend-app/: package-lock.json  package.json
